<resources>
    <string name="app_name">Multimedia Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullscreen_image_content_description">Image</string>
    <string name="pdf_viewer_toolbar_back_button_content_description">Back</string>
    <string name="pdf_viewer_toolbar_textview">TextView</string>
    <string name="video_fragment">Video Fragment</string>
    <string name="audio_fragment">Audio Fragment</string>
    <string name="image_rv_item_content_description">Image</string>
    <string name="pdf_rv_item_icon_content_description">PDF Icon</string>
    <string name="pdf_rv_item_path">/storage/0/sample/filepath.pdf</string>
    <string name="pdf_rv_item_name">PDF File Name</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="pdf">PDF</string>
    <string name="sort">Sort</string>
    <string name="view_type">View Type</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="test_mp3">"https://storage.googleapis.com/exoplayer-test-media-0/play.mp3"</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="myTestMp4">"https://download.blender.org/demo/movies/BBB/bbb_sunflower_1080p_30fps_normal.mp4"</string>
    <string name="sort_by">SORT BY:</string>
    <string name="name">Name</string>
    <string name="date_modified">Date Modified</string>
    <string name="size">Size</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="audio_icon">Audio Icon</string>
    <string name="video_icon">Video Icon</string>
    <string name="pdf_icon">PDF Icon</string>
    <string name="image_thumbnail">Image Thumbnail</string>
    <string name="next_button">Next Button</string>
    <string name="play_pause_button">Play/Pause Button</string>
    <string name="loading">Loading</string>
    <string name="colon">:</string>
    <string name="initial_time">00:00</string>
    <string name="back_button">Back Button</string>
    <string name="null_button">Null Button</string>
    <string name="lock_button">Lock Button</string>
    <string name="orientation_button">Orientation Button</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="previous_button">Previous Button</string>
    <string name="fullscreen_button">Fullscreen Button</string>
    <string name="scroll">Scroll</string>
    <string name="mutlimedia_hub">Mutlimedia Hub</string>
    <string name="equalizer_button">Equalizer Button</string>
    <string name="share_button">Share Button</string>
</resources>