<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/image"
        android:icon="@drawable/baseline_image_24"
        android:id="@+id/image"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/video"
        android:icon="@drawable/clapperboard"
        android:id="@+id/video"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/music"
        android:icon="@drawable/baseline_music_note_24"
        android:id="@+id/music"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/pdf"
        android:icon="@drawable/pdf_file1"
        android:id="@+id/pdf"/>
</menu>