<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dark_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_dark_mode_24"
        app:showAsAction="ifRoom"
        android:title="@string/dark_mode" />

    <item
        android:id="@+id/view_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_grid_view_24"
        app:showAsAction="always"
        android:title="@string/view_type" />

    <item
        android:id="@+id/sort_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_sort_24"
        app:showAsAction="always"
        android:title="@string/sort" />


</menu>