<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AudioPlayer"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon_ios_dark"
            android:background="?attr/selectableItemBackground"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/back_button"
            android:padding="10dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/mutlimedia_hub"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/favouriteBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/skip_next_icon"
            android:background="?attr/selectableItemBackground"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/null_button"
            app:tint="@android:color/holo_red_dark"
            android:visibility="invisible"/>
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
        android:src="@drawable/audio_thumbnail_2"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="0dp"/>

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text=""
        android:textSize="18sp"
        android:gravity="center"
        android:layout_weight="1"
        android:textIsSelectable="true"
        android:contentDescription="@string/name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/skip_previous_icon"
            android:backgroundTint="@color/teal_200"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
            app:iconSize="40dp"
            android:contentDescription="@string/previous_button"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon_dark"
            app:iconSize="50dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"
            android:contentDescription="@string/play_pause_button"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/skip_next_icon"
            android:backgroundTint="@color/teal_200"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
            app:iconSize="40dp"
            android:contentDescription="@string/next_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/initial_time"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:progressBackgroundTint="@color/teal_200"
            android:backgroundTint="@color/teal_200"/>

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/loading"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/repeat_icon_dark"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/repeat_button"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:id="@+id/equalizerBtnPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/equalizer_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/equalizer_button"
            android:layout_weight="1"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/share_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/share_button"
            android:layout_weight="1"
            app:tint="@color/cool_pink" />

    </LinearLayout>

</LinearLayout>