<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".VideoPlayerActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:controller_layout_id="@layout/custom_control_view"
        app:show_buffering="always" />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/moreFeaturesBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/null_button"
            android:padding="10dp"
            android:src="@drawable/launcher_icon"
            android:visibility="invisible"
            app:tint="@color/white" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/lockBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock_button"
        android:src="@drawable/lock_open_icon"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/playPauseBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/play_pause_button"
        android:focusable="true"
        android:src="@drawable/play_icon_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="end|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/orientationBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/orientation_button"
            android:src="@drawable/screen_rotation_icon"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/repeat_button"
            android:src="@drawable/exo_controls_repeat_off"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/previous_button"
            android:src="@drawable/skip_previous_icon"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/next_button"
            android:src="@drawable/skip_next_icon"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/fullScreenBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/fullscreen_button"
            android:src="@drawable/fullscreen_icon"
            app:tint="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>