<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="3dp"
        app:srcCompat="@drawable/pdf_icon"
        android:contentDescription="@string/pdf_rv_item_icon_content_description" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="11dp"
        android:layout_toEndOf="@id/imageView"
        android:text="@string/pdf_rv_item_name"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/file_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/file_name"
        android:layout_marginEnd="11dp"
        android:layout_toEndOf="@id/imageView"
        android:text="@string/pdf_rv_item_path"
        android:textSize="12sp"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/file_path"
        android:layout_marginTop="5dp"
        android:background="@color/gray" />
</RelativeLayout>