<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#42000000"
    android:orientation="vertical">

    <!--<LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="Back Button"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Video Name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/moreFeaturesBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/launcher_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="Back Button"
            app:tint="@color/white"
            android:layout_marginEnd="50dp"
            android:padding="10dp"
            android:visibility="invisible"/>

    </LinearLayout>-->


    <!--<ImageButton
        android:id="@+id/playPauseBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:contentDescription="Play Button"
        android:focusable="true"
        android:src="@drawable/baseline_play_arrow_24"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="end|bottom">

        <ImageButton
            android:id="@+id/orientationBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_screen_rotation_24"
            android:contentDescription="Orientation"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/exo_controls_repeat_off"
            android:contentDescription="Repeat Button"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_skip_previous_24"
            android:contentDescription="Previous Button"
            app:tint="@color/white" />
        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_skip_next_24"
            android:contentDescription="Next Button"
            app:tint="@color/white" />
        <ImageButton
            android:id="@+id/fullScreenBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_fullscreen_24"
            android:contentDescription="Fullscreen Button"
            app:tint="@color/white" />
    </LinearLayout>-->

    <com.google.android.exoplayer2.ui.DefaultTimeBar
        android:id="@id/exo_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:buffered_color="#80FFFFFF"
        app:played_color="@color/white"
        app:scrubber_color="@color/white"
        app:scrubber_disabled_size="10dp"
        app:scrubber_enabled_size="15dp"
        app:unplayed_color="#80FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/initial_time"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/colon"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>